# ps2mcfs-wasm

./: CMakeLists.txt  README.md  build.sh  extern-pre.js  interface.d.ts  main.cpp
cardgen/: CMakeLists.txt
cardgen/include/: cardgen.h
cardgen/src/: cardgen.c
mcfat/: CMakeLists.txt
mcfat/include/: mcfat.h  mcio.h
mcfat/src/: mcio.c
